<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PeopleHealth</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="test">--</string>
    <string name="press_your_phone">请输入您的手机号</string>
    <string name="press_your_password">请输入字母、数字组成的密码</string>
    <string name="login">登陆</string>
    <string name="you_have_no_register">您还没有注册？</string>
    <string name="phone_register">手机注册</string>
    <string name="press_your_vertify_code">请输入您的验证码</string>
    <string name="get_vertify_code">获取验证码</string>
    <string name="i_agree_protocal">我同意协议政策</string>
    <string name="finish_register">完成注册</string>
    <string name="finish">完成</string>
    <string name="nice_name">昵称</string>
    <string name="sex">性别</string>
    <string name="male">先生</string>
    <string name="female">女士</string>
    <string name="invite_code">邀请码</string>
    <string name="my_order">我的订单</string>
    <string name="check_all_order">查看全部订单</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_send">代发货</string>
    <string name="wait_get">待收货</string>
    <string name="wait_evaluate">待评价</string>
    <string name="refund">退款/售后</string>
    <string name="all">全部</string>
    <string name="no_pay">未支付</string>
    <string name="no_send">未发货</string>
    <string name="no_get">未收货</string>
    <string name="no_evelaute">未评价</string>
    <string name="no_refund">退换</string>
    <string name="default_">默认</string>
    <string name="price">价格</string>
    <string name="sales">销量</string>
    <string name="add_shopping_cart">加入购入车</string>
    <string name="pay_now">立刻支付</string>
    <string name="continue_shop">继续选购</string>
    <string name="select_pay_way">选择支付方式</string>
    <string name="you_need_to_pay">您需要支付</string>
    <string name="submit_order">提交订单</string>

</resources>