<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/layout_title" />

    <EditText
        android:id="@+id/edit_quick_regitser_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/press_your_phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_quick_register_vertify_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/press_your_vertify_code" />

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_quick_register_vertify_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:text="@string/get_vertify_code" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_quick_register_protocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_agree_protocal" />

    <Button
        android:id="@+id/btn_quick_register_finish_reqister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/finish_register" />

</LinearLayout>