<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_order_manager_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/all" />

        <TextView
            android:id="@+id/tv_order_manager_no_pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no_pay" />

        <TextView
            android:id="@+id/tv_order_manager_no_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no_send" />

        <TextView
            android:id="@+id/tv_order_manager_no_get"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no_get" />

        <TextView
            android:id="@+id/tv_order_manager_no_evelaute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no_evelaute" />

        <TextView
            android:id="@+id/tv_order_manager_no_refund"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no_refund" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_order_manager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>